--- a/wpf_demo_phonebook/MainWindow.xaml
+++ b/wpf_demo_phonebook/MainWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpf_demo_phonebook"
         mc:Ignorable="d"
-        Title="MainWindow" MinHeight="300" Width="800">
+        Title="MainWindow" MinHeight="260" Width="800">
     <DockPanel>
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="172"/>
             <ColumnDefinition/>
             <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
+            </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -21,28 +22,53 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
-            <TextBlock Text="Recherche : "/>
-            <TextBox x:Name="txtCriteria" HorizontalAlignment="Right" Width="150"/>
-        </StackPanel>
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Prénom : "/>
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Nom de famille : "/>
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Email : "/>
-        <TextBlock Grid.Row="4" Grid.Column="0" Text="Téléphone : "/>
-        <TextBlock Grid.Row="5" Grid.Column="0" Text="Celluaire : "/>
-        <TextBlock Grid.Row="7" Grid.Column="0" Text="Identifiant : "/>
-
-        <Button  Grid.Row="0" Grid.Column="1" Content="Recherche" 
+            <StackPanel DockPanel.Dock="Top" Grid.ColumnSpan="3">
+                <Menu>
+                    <MenuItem Header="_Fichier">
+                        <MenuItem Header="_Ouvrir..."/>
+                        <MenuItem Header="_Sauvegarder"/>
+                        <MenuItem Header="_Fermer"/>
+                    </MenuItem>
+                    <MenuItem Header="_Édition">
+                        <MenuItem Header="Couper..."/>
+                        <MenuItem Header="Copier"/>
+                        <MenuItem Header="Coller"/>
+                    </MenuItem>
+                    <MenuItem Header="Enregistrement">
+                        <MenuItem Header="Nouveau" />
+                    </MenuItem>
+                </Menu>
+            </StackPanel>
+            <ToolBar BorderBrush="AliceBlue" Grid.ColumnSpan="3" Grid.Row="1" DockPanel.Dock="Top">
+                <Button Content="+Contact"></Button>
+                <Separator/>
+                <TextBlock Height="15" Text="Recherche : "/>
+                <TextBox BorderBrush="Gray" x:Name="txtCriteria" HorizontalAlignment="Right" Margin="0,0,10,0" Width="150"/>
+                <Button  Grid.Row="1" Background="LightGray" BorderBrush="Gray" Grid.Column="1" Content="Recherche" 
                     Command="{Binding SearchContactCommand}" 
-                    CommandParameter="{Binding ElementName=txtCriteria,Path=Text}" />
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedContact.FirstName}"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedContact.LastName}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedContact.Email}"/>
-        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding SelectedContact.Phone}"/>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedContact.Mobile}"/>
-        <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding SelectedContact.ContactID}"/>
+                    CommandParameter="{Binding ElementName=txtCriteria,Path=Text}" Click="Button_Click" />
+            </ToolBar>
+
+            <ListView Grid.Row="2" Width="170" HorizontalAlignment="Left" Grid.RowSpan="7" Grid.ColumnSpan="2" Margin="0,0,266,-29"></ListView>
+        <TextBlock Grid.Row="2" Height="25" Grid.Column="1" Text="Prénom : "/>
+        <TextBlock Grid.Row="3" Height="25" Grid.Column="1" Text="Nom de famille : "/>
+        <TextBlock Grid.Row="4" Height="25" Grid.Column="1" Text="Email : "/>
+        <TextBlock Grid.Row="5" Height="25" Grid.Column="1" Text="Téléphone : "/>
+        <TextBlock Grid.Row="6" Height="25" Grid.Column="1" Text="Celluaire : "/>
+            <TextBlock Grid.Row="7" Height="25" Grid.Column="1" Text="Identifiant : "/>
+
+            <Button Grid.Column="2" Grid.Row="8" Content="Supprimer" Width="70" HorizontalAlignment="Right"></Button>
+        <Button Grid.Column="2" Grid.Row="8" Content="Enregistrer" Width="70" Margin="85,0,0,0" HorizontalAlignment="Center"></Button>
+
+        <TextBox Grid.Row="2" Height="20" Grid.Column="2" Text="{Binding SelectedContact.FirstName}"/>
+        <TextBox Grid.Row="3" Height="20" Grid.Column="2" Text="{Binding SelectedContact.LastName}"/>
+        <TextBox Grid.Row="4" Height="20" Grid.Column="2" Text="{Binding SelectedContact.Email}"/>
+        <TextBox Grid.Row="5" Height="20" Grid.Column="2" Text="{Binding SelectedContact.Phone}"/>
+        <TextBox Grid.Row="6" Height="20" Grid.Column="2" Text="{Binding SelectedContact.Mobile}"/>
+        <TextBox Grid.Row="7" Height="20" Grid.Column="2" Text="{Binding SelectedContact.ContactID}"/>
         </Grid>
     </DockPanel>
 </Window>
