--- a/wpf_demo_phonebook/Views/MainWindow.xaml
+++ b/wpf_demo_phonebook/Views/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:wpf_demo_phonebook"
         mc:Ignorable="d"
         Title="MainWindow" MinHeight="200" Width="800">
+
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Grid.ColumnSpan="3">
             <Menu>
@@ -25,7 +26,7 @@
             </Menu>
         </StackPanel>
         <ToolBar BorderBrush="AliceBlue" Grid.ColumnSpan="3" Grid.Row="1" DockPanel.Dock="Top">
-            <Button Content="+Contact" Click="NewCustomer"></Button>
+            <Button Content="+Contact" Command="{Binding AddContactCommand}"></Button>
             <Separator/>
             <TextBlock Height="15" Text="Recherche : "/>
             <TextBox BorderBrush="Gray" x:Name="txtCriteria" HorizontalAlignment="Right" Margin="0,0,10,0" Width="150"/>
@@ -62,15 +63,17 @@
                 <TextBlock Grid.Row="4" Height="25" Grid.Column="0" HorizontalAlignment="Left" Text="Celluaire : "/>
                 <TextBlock Grid.Row="5" Height="25" Grid.Column="0" HorizontalAlignment="Left" Text="Identifiant : "/>
 
-                <Button Grid.Column="2" Grid.Row="6" Content="Supprimer" Click="SupprimeButton" Width="70" HorizontalAlignment="Right"></Button>
-                <Button Grid.Column="2" Grid.Row="6" Content="Enregistrer" Click="UpdateButton" Command="{Binding UpdateContact}"  Width="70" Margin="85,0,0,0" HorizontalAlignment="Center"></Button>
-
-                <TextBox Grid.Row="0" Height="20" Grid.Column="1" Text="{Binding SelectedContact.FirstName}"/>
-                <TextBox Grid.Row="1" Height="20" Grid.Column="1" Text="{Binding SelectedContact.LastName}"/>
-                <TextBox Grid.Row="2" Height="20" Grid.Column="1" Text="{Binding SelectedContact.Email}"/>
-                <TextBox Grid.Row="3" Height="20" Grid.Column="1" Text="{Binding SelectedContact.Phone}"/>
-                <TextBox Grid.Row="4" Height="20" Grid.Column="1" Text="{Binding SelectedContact.Mobile}"/>
-                <TextBox Grid.Row="5" Height="20" Grid.Column="1" Text="{Binding SelectedContact.ContactID}"/>
+                <StackPanel Grid.Column="2" Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Button  Content="Enregistrer" Command="{Binding UpdateContactCommand}"  Width="70" Margin="5"></Button>
+                    <Button  Content="Supprimer"   Command="{Binding DeleteContactCommand}" Width="70"  Margin="5"></Button>
+                </StackPanel>
+                
+                <TextBox Grid.Row="0" Height="20" Grid.Column="1" Name="Prenom" Text="{Binding SelectedContact.FirstName}" />
+                <TextBox Grid.Row="1" Height="20" Grid.Column="1" x:Name="Nom" Text="{Binding SelectedContact.LastName}"/>
+                <TextBox Grid.Row="2" Height="20" Grid.Column="1" x:Name="Email" Text="{Binding SelectedContact.Email}"/>
+                <TextBox Grid.Row="3" Height="20" Grid.Column="1" x:Name="Phone" Text="{Binding SelectedContact.Phone}"/>
+                <TextBox Grid.Row="4" Height="20" Grid.Column="1" x:Name="Mobile" Text="{Binding SelectedContact.Mobile}"/>
+                <TextBox Grid.Row="5" Height="20" Grid.Column="1" x:Name="ContactID" Text="{Binding SelectedContact.ContactID}"/>
             </Grid>
 
             <ListView Width="170" SelectedItem="{Binding SelectedContact}" x:Name="Listviewitems" HorizontalAlignment="Left"  
